# claq

./: .gitignore  README.md  pyproject.toml
artifacts/data/bias_in_bios_sample/: labels_wide_test_train_validation.csv  test.csv  (+2 more)
artifacts/models/: concept_qa_bias_in_bios_concept_answerer_mlp_openai_labels.pt  concept_qa_bias_in_bios_concept_qa_full.pt  concept_qa_bias_in_bios_concept_qa_hybrid_full.pt
artifacts/runs/: bias_in_bios_claq_experiment_curve.csv  bias_in_bios_claq_experiment_history.csv  bias_in_bios_claq_experiment_query_usage.csv  bias_in_bios_claq_experiment_sample_comparison.csv  bias_in_bios_claq_experiment_stopping.csv  bias_in_bios_claq_experiment_summary.json  concept_qa_bias_in_bios_concept_answerer_mlp_openai_labels_history.json  concept_qa_bias_in_bios_concept_answerer_mlp_openai_labels_per_concept_diagnostics.csv  concept_qa_bias_in_bios_concept_qa_full_history.json  concept_qa_bias_in_bios_concept_qa_hybrid_full_history.json
assets/concepts/: bias_in_bios.csv
claq/: __init__.py  config.py  sensitive_labels.py
claq/analysis/: fixed_history_eval.py  plots.py  replays.py  rollouts.py
claq/core/: checkpoints.py  runtime.py
claq/data/: __init__.py  celeba.py  cifar10.py
claq/models/: __init__.py  concept_qa.py
claq/training/: __init__.py  claq.py  concept_qa.py
notebooks/: bias_in_bios_concept_eda.ipynb  bias_in_bios_concept_qa_training.ipynb  bias_in_bios_dataset_creation.ipynb  bias_in_bios_experiment.ipynb  bias_in_bios_train_concept_qa.ipynb  celeba_experiment.ipynb  cifar10_experiment.ipynb
scripts/: bench_regex_nli.py
